<resources>
    <string name="app_name">SensorSurvey</string>
    <string name="error_no_sensor">No sensor</string>
    <string name="label_light">Light Sensor: %1$.2f</string>
    <string name="label_proximity">Proximity Sensor: %1$.2f</string>
    <string name="testTextView">DEBUG</string>
    <string name="testtextview2">testTextView2</string>
    <string name="label_acceleration">Acceleration: %1$.2f %2$.2f %3$.2f</string>
    <string name="accelerationgr">AccelerationGR: %1$.2f %2$.2f %3$.2f</string>
</resources>
