<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:layout_margin="16dp">


    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="112dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintVertical_bias="0.0"
            android:id="@+id/scrollView2">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            <TextView
                    android:text="(placeholder)"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/sensor_list" android:layout_marginTop="16dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"/>
        </LinearLayout>
    </ScrollView>
    <TextView
            android:text="@string/label_light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="28dp"
            android:id="@+id/label_light"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/scrollView2"/>
    <TextView
            android:text="@string/label_proximity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="28dp"
            android:id="@+id/label_proximity"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/label_light"/>
    <TextView
            android:text="@string/testTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/testTextView" android:layout_marginBottom="76dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginStart="16dp"/>
    <TextView
            android:text="@string/testtextview2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/testTextView2" app:layout_constraintStart_toEndOf="@+id/testTextView"
            android:layout_marginStart="72dp" android:layout_marginBottom="76dp"
            app:layout_constraintBottom_toBottomOf="parent"/>
    <TextView
            android:text="@string/label_acceleration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/label_acceleration" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="28dp"
            android:layout_marginTop="17dp" app:layout_constraintTop_toBottomOf="@+id/label_proximity"/>
    <TextView
            android:text="@string/accelerationgr"
            android:layout_width="220dp"
            android:layout_height="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/AccelerationGravityRemovedTextView" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="28dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/label_acceleration"
            app:layout_constraintVertical_bias="0.047"/>

</android.support.constraint.ConstraintLayout>